--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
+    "ip-num": "^1.5.0",
     "leaflet": "^1.9.3",
     "next": "13.1.2",
     "react": "18.2.0",
