--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   "dependencies": {
     "@mdi/font": "^7.1.96",
     "@next/font": "13.1.2",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
     "bootstrap": "^5.2.3",
     "ip-num": "^1.5.0",
@@ -28,6 +25,9 @@
   },
   "devDependencies": {
     "@types/bootstrap": "^5.2.6",
-    "@types/leaflet": "^1.9.0"
+    "@types/leaflet": "^1.9.0",
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10"
   }
 }
