--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -21,5 +21,5 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Build Vuejs
+      - name: Build Nextjs
         run: npm run build
