--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "18.2.0",
     "react-intl": "^6.2.5",
     "react-leaflet": "^4.2.0",
+    "request-ip": "^3.3.0",
     "sass": "^1.57.1",
     "typescript": "4.9.4"
   },
@@ -28,6 +29,7 @@
     "@types/leaflet": "^1.9.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10"
+    "@types/react-dom": "18.0.10",
+    "@types/request-ip": "^0.0.37"
   }
 }
